# pyforecast

./: .gitignore  README.md  pyproject.toml
configs/: production.yaml  quick.yaml  research.yaml
docs/: Algorithms.md  Configuration.md  Export_Formats.md  PyForecast_Refinement_Guide.md  PyForecast_Validation_Guide.md  User_Guide.md  generate_full_documentation.py  generate_full_guide.py  generate_pdf.py  generate_sample_plots_with_actuals.py  generate_test_results_pdf.py
drive/: AC_ECONOMIC_FORMAT.md  sample_ac_economic_export.csv  sample_ac_economic_import.csv
src/pyforecast/: __init__.py  __main__.py  config.py
src/pyforecast/batch/: __init__.py  exporter.py  processor.py  visualizer.py
src/pyforecast/cli/: __init__.py  commands.py
src/pyforecast/core/: __init__.py  fitting.py  models.py  regime_detection.py  selection.py
src/pyforecast/data/: __init__.py  aries.py  base.py  enverus.py  well.py
src/pyforecast/export/: __init__.py  aries_ac_economic.py  aries_export.py  json_export.py
tests/: __init__.py  test_batch_processor.py  test_cli.py  test_config.py  test_data_parsers.py  test_fitting.py  test_integration.py  test_models.py  test_orchestrator.py  test_selection.py  test_validation.py
tests/export/: test_aries_ac_economic.py  test_json_export.py
tests/fixtures/: sample_aries.csv  sample_enverus.csv
tests/import_/: __init__.py  test_aries_forecast.py
tests/refinement/: __init__.py  test_fit_logger.py  test_ground_truth.py  test_hindcast.py  test_parameter_learning.py  test_residual_analysis.py  test_storage.py
(+19 files in other folders)
